name:                hhprof
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/pmiddend/hhprof#readme
license:             BSD3
license-file:        LICENSE
author:              Philipp Middendorf
maintainer:          pmidden@secure.mailbox.org
copyright:           value
category:            value
build-type:          Simple
cabal-version:       >=1.10

executable hhprof
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , attoparsec
                     , bytestring
                     , attoparsec-binary
